# cppspt

./: CMakeLists.txt  GenerateBuild.bat  LICENSE  README.md  RunTests.bat
examples/: CMakeLists.txt  cppspt_example.cpp
include/cppspt/: cppspt.hpp  cppspt_category.hpp
test/: CMakeLists.txt  cppspt_category_test.cpp  cppspt_in_test.cpp  cppspt_out_test.cpp  cppspt_test.hpp  cppspt_uninit_test.cpp  test_main.cpp
